Codion upgraded